[package]
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
description = "Commandline interface for IRMAseal"
edition = "2018"
license = "MIT"
name = "irmaseal-cli"
version = "0.1.4"

[dependencies]
futures = "0.3.4"
rand = "0.8.4"

[dependencies.arrayvec]
features = ["serde"]
version = "0.7.1"

[dependencies.clap]
features = ["derive"]
version = "3.0.0-beta.4"

[dependencies.ibe]
path = "../../ibe"

[dependencies.irmaseal-core]
features = ["stream"]
path = "../irmaseal-core"

[dependencies.qrcode]
default-features = false
version = "0.12.0"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json"]
version = "0.10.4"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.serde_json]
version = "1.0.57"

[dependencies.tokio]
features = ["rt-threaded", "time"]
version = "0.2.5"

[features]
v1 = ["irmaseal-core/v1", "ibe/kv1"]
