[package]
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
description = "Commandline interface for IRMAseal"
edition = "2018"
license = "MIT"
name = "irmaseal-cli"
version = "0.1.4"

[dependencies]
futures = "0.3.4"
rand = "0.8.4"
arrayvec = { version = "0.7.1", features = ["serde"] }
clap = { version = "3.0.10", features = ["derive"] }
irmaseal-core = { path = "../irmaseal-core", features = ["stream"] }
qrcode = { version = "0.12.0", default-features = false }
reqwest = { version = "0.10.4", default-features = false, features = [
  "rustls-tls",
  "json"
] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0.57" }
tokio = { version = "0.2.5", features = ["rt-threaded", "time"] }
irma = "0.2.1"
indicatif = "0.16.2"

[features]
v1 = ["irmaseal-core/v1"]
