[package]
name = "irmaseal-core"
description = "Core library for IRMAseal communication and bytestream operations."
version = "0.1.3"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"
license = "MIT"
keywords = ["ibe", "encryption", "ecc", "no_std"]
homepage = "https://github.com/Wassasin/irmaseal/tree/master/irmaseal-core"
categories = ["cryptography", "no-std"]

[dependencies]
rand = { version = "0.8.4" }
subtle = "2.3"
irma = "0.2.1"
ibe = { git = "https://github.com/encryption4all/ibe.git", branch = "0.2.0-beta.0", features = [
  "cgwkv", "mr"
] }
serde = { version = "1.0.126", features = ["derive"] }
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
rmp-serde = "0.15.5"
serde_json = "1.0.68"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
base64ct = { version = "1.0.2" }
futures = "0.3.17"
# For normal stream feature
aead = { version = "0.4.3", features = ["stream", "alloc"], optional = true }
aes-gcm = { version = "0.9.4", optional = true }
# For wasm_stream feature
wasm-bindgen = { version = "0.2.78", optional = true }
js-sys = { version = "0.3.55", optional = true }
cipher = { version = "0.3.0", optional = true }
wasm-bindgen-futures = { version = "0.4.28", optional = true }
web-sys = { version = "0.3.55", features = [
  "SubtleCrypto",
  "AesGcmParams",
  "Crypto",
  "CryptoKey",
  "console"
], optional = true }

[dev-dependencies]
serde-transcode = "1.1.1"
criterion = "0.3.5"

[features]
default = []
stream = [
  "aead/stream",
  "aes-gcm"
]
wasm_stream = [
  "aead/stream",
  "wasm-bindgen",
  "js-sys",
  "wasm-bindgen-futures",
  "web-sys/SubtleCrypto",
  "web-sys/AesGcmParams",
  "web-sys/Crypto",
  "web-sys/CryptoKey",
  "web-sys/console"
]
v1 = ["ibe/kv1"]

[[bench]]
name = "main"
harness = false
required-features = ["stream"]
