[package]
name = "irmaseal-core"
description = "Core library for IRMAseal communication and bytestream operations."
version = "0.2.0"
authors = [
  "Leon Botros <l.botros@cs.ru.nl",
  "Wouter Geraedts <git@woutergeraedts.nl>"
]
edition = "2021"
license = "MIT"
keywords = ["ibe", "encryption", "ecc"]
homepage = "https://github.com/encryption4all/irmaseal/tree/0.2.0-beta.0/irmaseal-core"
categories = ["cryptography"]

[dependencies]
irma = "0.2.1"
ibe = { version = "0.2.3", features = ["cgwkv", "mkem"] }
rand = { version = "0.8.4" }
subtle = "2.3"
serde = { version = "1.0.126", features = ["derive"] }
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
rmp-serde = "0.15.5"
serde_json = "1.0.68"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
base64ct = { version = "1.0.2" }
futures = { version = "0.3.21", optional = true }

# For normal stream feature
aead = { version = "0.4.3", features = ["stream", "alloc"], optional = true }
aes-gcm = { version = "0.9.4", optional = true }

# For wasm_stream feature
wasm-bindgen = { version = "0.2.78", optional = true }
js-sys = { version = "0.3.55", optional = true }
cipher = { version = "0.3.0", optional = true }
wasm-bindgen-futures = { version = "0.4.28", optional = true }
web-sys = { version = "0.3.55", features = [
  "SubtleCrypto",
  "AesGcmParams",
  "Crypto",
  "CryptoKey",
], optional = true }

[dev-dependencies]
serde-transcode = "1.1.1"
criterion = "0.3.5"

[features]
default = []
stream = ["futures", "aead/stream", "aes-gcm"]
wasm_stream = [
  "wasm-bindgen",
  "js-sys",
  "futures",
  "wasm-bindgen-futures",
  "web-sys/SubtleCrypto",
  "web-sys/AesGcmParams",
  "web-sys/Crypto",
  "web-sys/CryptoKey",
]

[[bench]]
name = "main"
harness = false
required-features = ["stream"]
