[package]
name = "irmaseal-wasm-bindings"
version = "0.2.2"
authors = [
  "Leon Botros <l.botros@cs.ru.nl>",
  "Bas Westerbaan <bas@westerbaan.name>"
]
edition = "2021"
license = "MIT"
description = "IRMAseal WebAssembly bindings for the browser"
repository = "https://github.com/encryption4all/irmaseal/tree/0.2.0-beta.0/irmaseal-wasm-bindings"
keywords = ["ibe", "encryption", "ecc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
irmaseal-core = { path = "../irmaseal-core", features = ["wasm_stream"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
js-sys = "0.3.50"
web-sys = { version = "0.3.50", features = ["console"] }
rand = { version = "0.8.4" }
serde = "*"
wasm-streams = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"

[dev-dependencies]
wasm-bindgen-test = "0.3.16"
irmaseal-core = { path = "../irmaseal-core", features = [
  "stream",
  "wasm_stream"
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
