[package]
name = "irmaseal-wasm-bindings"
version = "0.2.3"
authors = [
  "Leon Botros <l.botros@cs.ru.nl>",
  "Bas Westerbaan <bas@westerbaan.name>"
]
edition = "2021"
license = "MIT"
description = "IRMAseal WebAssembly bindings for the browser"
repository = "https://github.com/encryption4all/irmaseal/tree/main/irmaseal-wasm-bindings"
keywords = ["ibe", "encryption", "ecc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
irmaseal-core = { path = "../irmaseal-core", default-features = false, features = ["web", "web_stream"] }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rand = { version = "0.8.4" }
serde = "*"
wasm-streams = "0.3"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
irmaseal-core = { path = "../irmaseal-core", features = [
  "web",
  "web_stream",
  "rust",
  "rust_stream"
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
