[package]
authors = [
  "Leon Botros <l.botros@cs.ru.nl>",
  "Wouter Geraedts <git@woutergeraedts.nl>",
]
description = "Commandline interface for PostGuard"
edition = "2021"
license = "MIT"
name = "pg-cli"
version = "0.3.3"

[dependencies]
pg-core = { path = "../pg-core", features = ["stream"] }
futures = "0.3.27"
rand = "0.8.4"
clap = { version = "3.2.23", features = ["derive"] }
qrcode = { version = "0.12.0", default-features = false }
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "1.0.57" }
tokio = { version = "1.26.0", features = ["full"] }
irma = "0.2.1"
indicatif = "0.17.3"
inquire = "0.6.0"
lazy_static = "1.4.0"
