[package]
name = "pg-core"
description = "PostGuard core library communication and bytestream operations."
version = "0.3.0-rc.0"
authors = [
  "Leon Botros <l.botros@cs.ru.nl",
  "Wouter Geraedts <git@woutergeraedts.nl>"
]
edition = "2021"
license = "MIT"
keywords = ["ibe", "encryption", "ecc"]
homepage = "https://github.com/encryption4all/postguard/tree/main/pg-core"
categories = ["cryptography"]

[dependencies]
ibe = { path = "./../../ibe", features = ["cgwkv", "mkem"] }
ibs = { path = "./../../ibs" }
irma = "0.2.1"
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.3"
tiny-keccak = { version = "2.0", features = ["sha3"] }
base64ct = { version = "1.5" }
bincode = "1.3.3"

# For both stream features.
futures = { version = "0.3", optional = true }

# For the Rust Crypto backend.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aead = { version = "0.5", features = ["stream", "alloc"] }
aes-gcm = { version = "0.10" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
cipher = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }
serde-wasm-bindgen = { version = "0.4" }
web-sys = { version = "0.3", features = [
  "SubtleCrypto",
  "AesGcmParams",
  "Crypto",
  "CryptoKey",
] }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
serde-transcode = "1.1.1"
criterion = "0.4"
rand = "0.8.5"
futures = { version = "0.3", features = ["io-compat"]}
futures-util = "0.3.25"

[features]
default = []
stream = ["futures"]

[[bench]]
name = "main"
harness = false
required-features = ["rust", "rust_stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
