[package]
name = "pg-ffi"
version = "0.1.1"
edition = "2021"
description = "C ABI wrapper around pg-core for PostGuard .NET SDK"
license = "MIT"
repository = "https://github.com/encryption4all/postguard"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
pg-core = { path = "../pg-core", version = "0.5", features = ["rust", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ibe = { version = "0.3.0", features = ["cgwkv", "mkem"] }
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
