[package]
authors = [
    "Leon Botros <l.botros@cs.ru.nl>",
    "Wouter Geraedts <git@woutergeraedts.nl>"
]
description = "HTTP API server for a PostGuard Private Key Generator (PKG) instance"
edition = "2021"
homepage = "https://github.com/encryption4all/postguard/tree/main/pg-pkg"
license = "MIT"
repository = "https://github.com/encryption4all/postguard"
name = "pg-pkg"
version = "0.3.0"

[dependencies]
actix-cors = "0.6.1"
actix-rt = "2.7.0"
actix-web = "4.1.0"
actix-http = "3"
actix-web-httpauth = "0.8.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
arrayref = "0.3.5"
futures-util = "0.3"
irma = "0.2.1"
paste = "1.0.5"
rand = "0.8"
reqwest = "0.11.10"
serde = "1.0"
serde_json = "1.0.68"
subtle = "2.1.1"
env_logger = "0.10.0"
log = "0.4.17"
lazy_static = "1.4.0"
twox-hash = "1.6.3"
base64 = "0.21.0"
jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
prometheus = { version = "0.13", default-features = false }
bincode = "1.3.3"
tokio = "1.47.1"

[dependencies.clap]
features = ["derive", "env"]
version = "4"

[dependencies.futures]
features = ["executor"]
version = "0.3"

[dependencies.pg-core]
path = "../pg-core"
version = "0.3"
features = []
