[package]
name = "pg-wasm"
version = "0.3.8"
authors = [
  "Leon Botros <l.botros@cs.ru.nl>",
  "Bas Westerbaan <bas@westerbaan.name>",
]
edition = "2021"
license = "MIT"
description = "PostGuard WebAssembly bindings for the browser"
repository = "https://github.com/encryption4all/postguard/tree/main/pg-wasm"
keywords = ["ibe", "encryption", "ecc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pg-core = { path = "../pg-core", features = ["web", "stream"] }
wasm-bindgen = { version = "0.2.100" }
js-sys = "0.3"
web-sys = "0.3"
rand = { version = "0.8.4" }
serde = "*"
wasm-streams = "0.4.2"
futures = "0.3"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
pg-core = { path = "../pg-core", features = ["rust", "web", "stream", "test"] }
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[profile.release]
strip = true
